--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@material-ui/icons": "^4.2.1",
     "clsx": "^1.0.4",
     "prop-types": "^15.7.2",
+    "radium": "^0.26.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-style": "^0.5.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3",
     "typeface-roboto": "0.0.75"
